--- a/cont_temp/package.json
+++ b/cont_temp/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start-server": "npx nodemon server/index.js"
+    "start-server": "npx nodemon server/index.js",
+    "seed": "node ./server/prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
@@ -22,7 +23,8 @@
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
