--- a/cont_temp/package.json
+++ b/cont_temp/package.json
@@ -17,9 +17,12 @@
     "@radix-ui/themes": "^3.1.4",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "framer-motion": "^11.11.9",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
