--- a/cont_temp/package.json
+++ b/cont_temp/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/themes": "^3.1.4",
     "@reduxjs/toolkit": "^2.3.0",
