--- a/cont_temp/package.json
+++ b/cont_temp/package.json
@@ -12,10 +12,12 @@
     "seed": "node ./server/prisma/seed.js"
   },
   "dependencies": {
+    "@popmotion/popcorn": "^0.4.4",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-primitive": "^2.0.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/themes": "^3.1.4",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
@@ -25,9 +27,12 @@
     "express": "^4.21.1",
     "framer-motion": "^11.11.9",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.7",
+    "popmotion": "^11.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lorem-ipsum": "^1.4.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0"
   },
@@ -35,6 +40,7 @@
     "@eslint/js": "^9.11.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^22.7.8",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
